# camsdk

./: .gitignore  00_core.ipynb  Makefile  README.md  cam_control.py  cam_sdk.Dockerfile  camsdk.Dockerfile  docker-compose.yml  index.ipynb  settings.ini
camsdk/: _nbdev.py  camera.py
docs/: _config.yml  core.html  index.html  sidebar.json
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
python_sdk/doc/: IpxCameraApiPythonHelp.html
python_sdk/doc/IpxCameraApiHelpHtml/: annotated.html  class_ipx_cam_1_1_buffer-members.html  class_ipx_cam_1_1_buffer.html  class_ipx_cam_1_1_device-members.html  class_ipx_cam_1_1_device.html  class_ipx_cam_1_1_device_info-members.html  class_ipx_cam_1_1_device_info.html  class_ipx_cam_1_1_interface-members.html  class_ipx_cam_1_1_interface.html  class_ipx_cam_1_1_list-members.html  class_ipx_cam_1_1_list.html  class_ipx_cam_1_1_stream-members.html  class_ipx_cam_1_1_stream.html  class_ipx_cam_1_1_system-members.html  class_ipx_cam_1_1_system.html  class_ipx_gen_param_1_1_array-members.html  class_ipx_gen_param_1_1_array.html  class_ipx_gen_param_1_1_boolean-members.html  class_ipx_gen_param_1_1_boolean.html  class_ipx_gen_param_1_1_category-members.html  class_ipx_gen_param_1_1_category.html  class_ipx_gen_param_1_1_command-members.html  class_ipx_gen_param_1_1_command.html  class_ipx_gen_param_1_1_enum-members.html  class_ipx_gen_param_1_1_enum.html  class_ipx_gen_param_1_1_enum_entry-members.html  class_ipx_gen_param_1_1_enum_entry.html  class_ipx_gen_param_1_1_float-members.html  class_ipx_gen_param_1_1_float.html  class_ipx_gen_param_1_1_int-members.html  class_ipx_gen_param_1_1_int.html  class_ipx_gen_param_1_1_param-members.html  class_ipx_gen_param_1_1_param.html  class_ipx_gen_param_1_1_param_event_sink-members.html  class_ipx_gen_param_1_1_param_event_sink.html  class_ipx_gen_param_1_1_string-members.html  class_ipx_gen_param_1_1_string.html  class_ipx_gui_1_1_i_ipx_gen_param_tree_view-members.html  class_ipx_gui_1_1_i_ipx_gen_param_tree_view.html  classes.html  (+55 more)
python_sdk/doc/IpxCameraApiPythonHelpHtml/: annotated.html  class_ipx_cam_py_1_1_py_buffer-members.html  class_ipx_cam_py_1_1_py_buffer.html  class_ipx_cam_py_1_1_py_data_stream-members.html  class_ipx_cam_py_1_1_py_data_stream.html  class_ipx_cam_py_1_1_py_device-members.html  class_ipx_cam_py_1_1_py_device.html  class_ipx_cam_py_1_1_py_device_info-members.html  class_ipx_cam_py_1_1_py_device_info.html  class_ipx_cam_py_1_1_py_device_interface-members.html  class_ipx_cam_py_1_1_py_device_interface.html  class_ipx_cam_py_1_1_py_image-members.html  class_ipx_cam_py_1_1_py_image.html  class_ipx_cam_py_1_1_py_ipx_system-members.html  class_ipx_cam_py_1_1_py_ipx_system.html  class_ipx_gen_param_py_1_1_py_gen_param-members.html  class_ipx_gen_param_py_1_1_py_gen_param.html  class_ipx_gen_param_py_1_1_py_gen_param_boolean-members.html  class_ipx_gen_param_py_1_1_py_gen_param_boolean.html  class_ipx_gen_param_py_1_1_py_gen_param_category-members.html  class_ipx_gen_param_py_1_1_py_gen_param_category.html  class_ipx_gen_param_py_1_1_py_gen_param_command-members.html  class_ipx_gen_param_py_1_1_py_gen_param_command.html  class_ipx_gen_param_py_1_1_py_gen_param_enum-members.html  class_ipx_gen_param_py_1_1_py_gen_param_enum.html  class_ipx_gen_param_py_1_1_py_gen_param_enum_entry-members.html  class_ipx_gen_param_py_1_1_py_gen_param_enum_entry.html  class_ipx_gen_param_py_1_1_py_gen_param_float-members.html  class_ipx_gen_param_py_1_1_py_gen_param_float.html  class_ipx_gen_param_py_1_1_py_gen_param_int-members.html  class_ipx_gen_param_py_1_1_py_gen_param_int.html  class_ipx_gen_param_py_1_1_py_gen_param_node-members.html  class_ipx_gen_param_py_1_1_py_gen_param_node.html  class_ipx_gen_param_py_1_1_py_gen_param_node_map-members.html  class_ipx_gen_param_py_1_1_py_gen_param_node_map.html  class_ipx_gen_param_py_1_1_py_gen_param_string-members.html  class_ipx_gen_param_py_1_1_py_gen_param_string.html  class_ipx_gen_param_py_1_1_py_gen_params-members.html  class_ipx_gen_param_py_1_1_py_gen_params.html  class_ipx_gui_py_1_1_py_gen_param_view-members.html  (+19 more)
python_sdk/doc/IpxToolsHelpHtml/: annotated.html  class_ipx_bayer-members.html  class_ipx_bayer.html  class_ipx_component-members.html  class_ipx_component.html  class_ipx_display-members.html  class_ipx_display.html  class_ipx_image_converter-members.html  class_ipx_image_converter.html  class_ipx_image_serializer-members.html  class_ipx_image_serializer.html  class_ipx_image_unpacker-members.html  class_ipx_image_unpacker.html  class_ipx_img_processor-members.html  class_ipx_img_processor.html  class_ipx_true_sense-members.html  class_ipx_true_sense.html  classes.html  dir_bfccd401955b95cf8c75461437045ac0.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  group___c___ipx_bayer.html  group___c___ipx_display.html  group___c___ipx_image_converter.html  group___c___ipx_image_serializer.html  group__cp.html  (+57 more)
python_sdk/inc/: IpxBayer.h  IpxCameraGuiApi.h  IpxImageConverter.h  IpxPixelType.h  IpxRAWImage.h  IpxToolsBase.h  IpxTrueSense.h
python_sdk/samples/: HOW_TO_BUILD_SAMPLES
python_sdk/samples/console/IpxTriggerStreamWritingConsole/: CMakeLists.txt  IpxTriggerStreamWritingConsole.cpp
python_sdk_18.04/doc/: IpxCameraApiHelp.html  IpxToolsHelp.html
python_sdk_18.04/inc/: IpxCameraApi.h  IpxCameraErr.h  IpxDisplay.h  IpxImage.h  IpxImageApi.h  IpxImageSerializer.h  IpxImageUnpacker.h  IpxImgProcessor.h  IpxUserData.h
python_sdk_18.04/samples/console/: CMakeLists.txt  IpxStreamConsole.pro
python_sdk_18.04/samples/console/IpxMultiStreamConsole/: CMakeLists.txt  IpxMultiStreamConsole.pro  IpxMultiStreamSample.cpp
python_sdk_18.04/samples/console/IpxStreamConsole/: IpxStreamSample.cpp
python_sdk_18.04/samples/gui/QtCheetahPythonExposureUI/: CMakeLists.txt  QtCheetahPythonExposureUI.h  QtCheetahPythonExposureUI.pro  main.cpp
(+290 files in other folders)
